# podcast-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_zh.md  ROADMAP.md  mock_client  mock_client.rs  mock_server.py  release.sh  transcript.md
.github/workflows/: release.yml
docs/plans/: 2026-03-12-transcribe-output-design.md  2026-03-12-transcribe-output-plan.md
plans/: phase-4-download.md  phase-5-youtube-subtitles.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  types.rs  validation.rs
src/api/endpoints/: categories.rs  episodes.rs  mod.rs  podcasts.rs  recent.rs  search.rs  stats.rs
src/commands/: categories.rs  config.rs  download.rs  episodes.rs  mod.rs  recent.rs  search.rs  show.rs  stats.rs  transcribe.rs  trending.rs  youtube_meta.rs  youtube_search.rs  youtube_subtitles.rs
src/config/: manager.rs  mod.rs
src/output/: json.rs  mod.rs  table.rs
tests/: categories_cli.rs  config_cli.rs  download_cli.rs  episodes_cli.rs  recent_cli.rs  smoke_cli.rs  stats_cli.rs  trending_cli.rs  youtube_meta_cli.rs  youtube_search_cli.rs  youtube_subtitles_cli.rs
