[package]
name = "podcast-cli"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
confy = "0.6"
hex = "0.4"
prettytable-rs = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3.10"
